--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>Nessie | IA para Gestión del Conocimiento Empresarial</title>
+    <title>NessieLP | Pruebas</title>
     <meta name="title" content="Nessie | IA para Gestión del Conocimiento Empresarial" />
     <meta name="description" content="Centraliza, busca y comprende toda la información de tu empresa con IA de última generación. Reduce un 87% el tiempo de búsqueda. Sin configuración compleja." />
     
