--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>NessieLP | Pruebas</title>
+    <title>Nessie | IA para Gestión del Conocimiento Empresarial</title>
     <meta name="title" content="Nessie | IA para Gestión del Conocimiento Empresarial" />
     <meta name="description" content="Centraliza, busca y comprende toda la información de tu empresa con IA de última generación. Reduce un 87% el tiempo de búsqueda. Sin configuración compleja." />
     
